# human-agent

./: .gitignore  README.md  pyproject.toml
examples/: client_example.py  serve_trained_model.py  test_trained_model.py  training_example.py  training_targeted_fix.py
src/human_agent/: __init__.py  server.py
src/human_agent/api/: __init__.py  schemas.py  wrapper.py
src/human_agent/core/: __init__.py  model.py  tokenizer.py
src/human_agent/functions/: __init__.py  builtin.py  registry.py
tests/: __init__.py  test_functions.py  test_model.py  test_tokenizer.py
