[tool.poetry]
name = "human-agent"
version = "0.0.1"
description = "Hierarchical Reasoning Model with OpenAI-compatible API and function calling"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
readme = "README.md"
packages = [{include = "human_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
torch = "^2.7.1"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.5.0"
numpy = "^2.3.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.7"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"

[tool.poetry.scripts]
human-agent-server = "human_agent.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
